# simasciitrain-jrespectepaslesconventions-axel-remi

./: CMakeLists.txt
include/Locomotive/: ALocomotive.hpp  ETypeLocomotive.hpp  ElectricLocomotive.hpp  GasolineLocomotive.hpp
include/Train/: ITrain.hpp  ITrainElement.hpp  Train.hpp
include/Wagon/: AWagon.hpp  ETypeWagon.hpp  FreightWagon.hpp  PassengerWagon.hpp  TypeWagon.hpp  UtilityWagon.hpp  Wagons.hpp
src/: main.cpp
src/Locomotive/: ALocomotive.cpp  ETypeLocomotive.cpp
src/Wagon/: AWagon.cpp  ETypeWagon.cpp  FreightWagon.cpp  PassengerWagon.cpp  TypeWagon.cpp  UtilityWagon.cpp  Wagons.cpp
